Fixing MRUFeatures logging when closing_all happens.

(1) MRUFeatures are calculated and saved when WillCloseAllTabs() is
    invoked but returned when the WebContentsDestroyed is called.
(2) MRUFeatures is calculated in WebContentsDestroyed if not in
    closing_all mode.
(3) Change tab_strip_model to respond to WillCloseAllTabs,
    CloseAllTabsCanceled and CloseAllTabsFinished.

Bug: 817174

Change-Id: Idea15b5c48666fbc0163ccba62ee37b23bb192f0
Reviewed-on: https://chromium-review.googlesource.com/1086552
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Giuffrida <michaelpg@chromium.org>
Commit-Queue: Charles . <charleszhao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571397}
Former-commit-id: 2271b821df065ad7b7cac95f1e1a927f505fc281