chrome/browser/resource_coordinator/tab_activity_watcher.h
@@ -7,6 +7,7 @@
 
 #include <memory>
 
+#include "base/containers/flat_set.h"
 #include "base/macros.h"
 #include "base/optional.h"
 #include "chrome/browser/resource_coordinator/tab_ranker/tab_score_predictor.h"
@@ -39,6 +40,10 @@ class TabActivityWatcher : public BrowserListObserver,
   base::Optional<float> CalculateReactivationScore(
       content::WebContents* web_contents);
 
+  // Called When A Tab is closed, log necessary metrics and erase the
+  // |web_contents_data| pointer in |all_closing_tabs_|.
+  void OnTabClosed(WebContentsData* web_contents_data);
+
   // Returns the single instance, creating it if necessary.
   static TabActivityWatcher* GetInstance();
 
@@ -63,6 +68,9 @@ class TabActivityWatcher : public BrowserListObserver,
   void TabPinnedStateChanged(TabStripModel* tab_strip_model,
                              content::WebContents* contents,
                              int index) override;
+  void WillCloseAllTabs(TabStripModel* tab_strip_model) override;
+  void CloseAllTabsStopped(TabStripModel* tab_strip_model,
+                           CloseAllStoppedReason reason) override;
 
   // BrowserTabStripTrackerDelegate:
   bool ShouldTrackBrowser(Browser* browser) override;
@@ -78,6 +86,9 @@ class TabActivityWatcher : public BrowserListObserver,
 
   // Loads the Tab Ranker model on first use and calculates tab scores.
   tab_ranker::TabScorePredictor predictor_;
+
+  // All WebContentsData of the browser that is currently in closing_all mode.
+  base::flat_set<WebContentsData*> all_closing_tabs_;
 
   DISALLOW_COPY_AND_ASSIGN(TabActivityWatcher);
 };
