chrome/browser/ui/tabs/tab_strip_model_observer.cc
@@ -67,10 +67,8 @@ void TabStripModelObserver::TabBlockedStateChanged(WebContents* contents,
 void TabStripModelObserver::TabStripEmpty() {
 }
 
-void TabStripModelObserver::WillCloseAllTabs() {
-}
+void TabStripModelObserver::WillCloseAllTabs(TabStripModel* tab_strip_model) {}
 
-void TabStripModelObserver::CloseAllTabsCanceled() {
-}
-
+void TabStripModelObserver::CloseAllTabsStopped(TabStripModel* tab_strip_model,
+                                                CloseAllStoppedReason reason) {}
 void TabStripModelObserver::SetTabNeedsAttentionAt(int index, bool attention) {}
