chrome/browser/resource_coordinator/tab_activity_watcher_unittest.cc
@@ -620,7 +620,7 @@ TEST_F(ForegroundedOrClosedTest, MultipleTabs) {
                                                     GURL(kTestUrls[2]));
   AdvanceClock();
   // MRU ordering by tab indices:
-  // 0 (foreground), 1 (created first), 2 (created last)
+  // 0 (foreground), 2 (created last), 1 (created first),
 
   // Foreground a tab to log an event.
   tab_activity_simulator_.SwitchToTabAt(tab_strip_model, 2);
@@ -661,11 +661,7 @@ TEST_F(ForegroundedOrClosedTest, MultipleTabs) {
         kEntryName, kTestUrls[2],
         {
             {ForegroundedOrClosed::kIsForegroundedName, 0},
-            // TODO(michaelpg): The final tab has an MRU of 0 because the
-            // remaining tabs were closed first. It would be more accurate to
-            // use the MRUIndex this tab had when CloseAllTabs() was called.
-            // See https://crbug.com/817174.
-            {ForegroundedOrClosed::kMRUIndexName, 0},
+            {ForegroundedOrClosed::kMRUIndexName, 1},
         });
 
     // The leftmost tab was in the background and was closed.
@@ -673,11 +669,7 @@ TEST_F(ForegroundedOrClosedTest, MultipleTabs) {
         kEntryName, kTestUrls[0],
         {
             {ForegroundedOrClosed::kIsForegroundedName, 0},
-            // TODO(michaelpg): The final tab has an MRU of 0 because the
-            // remaining tabs were closed first. It would be more accurate to
-            // use the MRUIndex this tab had when CloseAllTabs() was called.
-            // See https://crbug.com/817174.
-            {ForegroundedOrClosed::kMRUIndexName, 0},
+            {ForegroundedOrClosed::kMRUIndexName, 2},
         });
 
     // No event is logged for the middle tab, which was in the foreground.
@@ -838,14 +830,70 @@ TEST_F(ForegroundedOrClosedTest, MRUIndex) {
     SCOPED_TRACE("");
     // The rightmost tab was in the foreground, so only the leftmost tab is
     // logged.
-    // TODO(michaelpg): The last tab has an MRU of 0 because the remaining tabs
-    // were closed first. It would be more accurate to use the MRUIndex this tab
-    // had when CloseAllTabs() was called. See https://crbug.com/817174.
     ukm_entry_checker_.ExpectNewEntry(
         kEntryName, kTestUrls[0],
         {
             {ForegroundedOrClosed::kIsForegroundedName, 0},
-            {ForegroundedOrClosed::kMRUIndexName, 0},
+            {ForegroundedOrClosed::kMRUIndexName, 1},
+        });
+  }
+}
+
+// Tests the MRUIndex for ForegroundedOrClosed events on multiple browsers.
+TEST_F(ForegroundedOrClosedTest, MRUIndexMultipleBrowser) {
+  Browser::CreateParams params(profile(), true);
+  // Create the first browser.
+  std::unique_ptr<Browser> browser =
+      CreateBrowserWithTestWindowForParams(&params);
+
+  TabStripModel* tab_strip_model = browser->tab_strip_model();
+  tab_activity_simulator_.AddWebContentsAndNavigate(tab_strip_model,
+                                                    GURL(kTestUrls[0]));
+  tab_strip_model->ActivateTabAt(0, false);
+  AdvanceClock();
+
+  tab_activity_simulator_.AddWebContentsAndNavigate(tab_strip_model,
+                                                    GURL(kTestUrls[1]));
+  AdvanceClock();
+
+  // Create the second browser.
+  std::unique_ptr<Browser> browser2 =
+      CreateBrowserWithTestWindowForParams(&params);
+  TabStripModel* tab_strip_model2 = browser2->tab_strip_model();
+  tab_activity_simulator_.AddWebContentsAndNavigate(tab_strip_model2,
+                                                    GURL(kTestUrls[2]));
+  tab_strip_model2->ActivateTabAt(0, false);
+  AdvanceClock();
+
+  tab_activity_simulator_.AddWebContentsAndNavigate(tab_strip_model2,
+                                                    GURL(kTestUrls[3]));
+  AdvanceClock();
+
+  // Tabs in MRU order: [kTestUrls[2], kTestUrls[0], kTestUrls[3], kTestUrls[1]]
+
+  tab_strip_model->CloseAllTabs();
+  {
+    SCOPED_TRACE("");
+    // The kTestUrls[0] was in the foreground, so only kTestUrls[1] is
+    // logged.
+    ukm_entry_checker_.ExpectNewEntry(
+        kEntryName, kTestUrls[1],
+        {
+            {ForegroundedOrClosed::kIsForegroundedName, 0},
+            {ForegroundedOrClosed::kMRUIndexName, 3},
+        });
+  }
+
+  tab_strip_model2->CloseAllTabs();
+  {
+    SCOPED_TRACE("");
+    // The kTestUrls[2] was in the foreground, so only kTestUrls[3] is
+    // logged.
+    ukm_entry_checker_.ExpectNewEntry(
+        kEntryName, kTestUrls[3],
+        {
+            {ForegroundedOrClosed::kIsForegroundedName, 0},
+            {ForegroundedOrClosed::kMRUIndexName, 1},
         });
   }
 }
